# prutoipa

./: Cargo.toml  README.md
prutoipa/: Cargo.toml
prutoipa-build/: Cargo.toml  README.md
prutoipa-build/src/: descriptor.rs  error.rs  generator.rs  lib.rs  package.rs  package_set.rs  syntax.rs
prutoipa-build/src/descriptor/: enum_descriptor.rs  message_descriptor.rs
prutoipa-build/src/descriptor/message_descriptor/: field.rs
prutoipa-build/src/generator/: enumeration.rs  message.rs
prutoipa-example/: Cargo.toml
prutoipa-example/protos/: auth.proto  pagination.proto  person.proto  sorting.proto  v1_users.proto
prutoipa-example/src/: main.rs
prutoipa-test/: Cargo.toml
