[package]
name = "prutoipa-build"
description = "Utoipa implementations using Prost! code generation engine."
version = "0.1.3"
edition = "2021"
keywords = ["protobuf", "OpenAPI", "utoipa"]
categories = ["web-programming", "encoding"]
authors = ["Mario Aragones Lozano (maarlo) <mario.aragones.lozano@gmail.com>"]
repository = "https://github.com/maarlo/prutoipa"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.1"
prost = "0.11.7"
prost-types = "0.11.7"
thiserror = "1.0.38"
