[package]
name = "prutoipa-example"
description = "Utoipa implementations using Prost! code generation engine."
version = "0.0.0"
edition = "2021"
keywords = ["protobuf", "OpenAPI", "utoipa"]
categories = ["web-programming", "encoding"]
authors = ["Mario Aragones Lozano (maarlo) <mario.aragones.lozano@gmail.com>"]
repository = "https://github.com/maarlo/prutoipa"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
prost-build = "0.11.6"
prutoipa-build = { path = "../prutoipa-build" }